<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/start_btn_background">

    <TextView
        android:id="@+id/loks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/song"
        android:textColor="@color/name_col"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/song_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aspire_song"
        android:textSize="20sp"
        android:layout_marginTop="65dp"
        android:textColor="@color/name_col"
        android:background="@drawable/button_type_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loks" />

    <TextView
        android:id="@+id/song_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enimies_song"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/name_col"
        android:background="@drawable/button_type_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_1" />

    <TextView
        android:id="@+id/song_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_type_1"
        android:text="@string/spark_song"
        android:textColor="@color/name_col"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_2"
        app:layout_constraintVertical_bias="0.163" />

    <TextView android:id="@+id/close_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@drawable/close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>