<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="330dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/start_btn_background"
    >

    <LinearLayout
        android:id="@+id/clock_img"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/clock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description"
            android:src="@drawable/win"
            android:background="@drawable/start_btn_background"
            />

        <Button
            android:id="@+id/btn_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_background"
            android:backgroundTint="#E63636"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/home_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            />
    </LinearLayout>

    <TextView android:id="@+id/win_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/win"
        android:layout_below="@+id/clock_img"
        android:textSize="28sp"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        />


</RelativeLayout>